 * Fix: Properly reset angle when undoing a point with the curve tool.
 * Server Feature: Log more a more detailed reason when a client is disconnected, since something like a login error can have many causes.
 * Feature: Indicate the difference between self-signed and "real" server certificates.

2024-02-18 Version 2.2.1
 * Fix: Default to previous directory when saving a fresh file. Thanks Crow for reporting.
 * Feature: Allow toggling performance-related canvas view settings, since some systems get slowdowns. Thanks DevonJP for reporting.
 * Fix: Don't force TLS socket algorithms, since ECDSA certs seem to not like them. Thanks Bluestrings for reporting.
 * Fix: Log message queue read, write and timeout errors properly. Thanks Pepper for reporting.
 * Feature: Implement WebSocket support in the server, available with the --websocket-port and --websocket-listen options.
 * Feature: Send keepalive messages from the server, if the client indicates support for it. Avoids them disconnecting when too busy uploading to send a ping.
 * Feature: Active user counts for sessions. A user counts as active if they drew in the last five minutes.
 * Feature: Make invite links indicated web client capability and NSFM-ness of sessions so that the invite page can show a "join in the browser" button and an appropriate notice respectively. Thanks Blozzom for suggesting the latter.
 * Fix: Properly handle cancelling a connection while it's being established. Thanks Fox for reporting.
 * Server Fix: When hosting without an account is enabled, also allow it for anyone *with* an account. Thanks ahaven for finding this.
 * Fix: Don't resize brush settings unnecessarily larger when switching between brush types. Thanks Meiren for reporting.
 * Fix: Try to handle switching between tablet pen and eraser more consistently. Thanks Daystream for reporting.